# PSOS

./: 202118010418_PSOS_AIDeclaration.docx
CW/: 202018010103-coursework-psos.docx  coursework-template_3.docx
CW/05_OpenSSL/: CMakeLists.txt  main.c
CW/202018010103-coursework-psos/202018010103-coursework-psos/File Encryption/Multithread/: MultithreadingLinux.c  prgram
CW/202018010103-coursework-psos/202018010103-coursework-psos/File Encryption/encrypt/: 111.txt  111.txt.key  CMakeLists.txt  Makefile  aes.c  encrypt.h  encrypted.txt  encrypted.txt.key  output.txt  program  scanf.c
CW/202018010210_PSOS_code/: CMakeLists.txt  decrypt.c  decrypt.h  encrypt.c  encrypt.h
CW/202118010418/: CMakeLists.txt  Makefile  common.h  decrypt.c  encrypt.c  main.c
CW/202118010418_PSOS_Coursework/: decrypt  decrypt.c  decrypt.h  dog.mp4.encrypted  dog.txt.encrypted  encrypt  encrypt.c  encrypt.h  hotpot.jpg.encrypted  oringin.txt  output.txt
CW/CW/: CMakeLists.txt  main.c
CW/PSOS/201918010102_PSOS_Code/: CMakeLists.txt  decrypt.c  decrypt.h  encrypt.c  encrypt.h
CW/aes/: aes  aes6.c
HELP/Coursework/: 2024-2025_Resit_CourseWork.docx
HELP/Coursework/PSOS/: CMakeLists.txt  encrypt.c
PSOS_file/: AES.c  Test1(Decrypted).txt  Test1.txt.encrypted  Test2.txt.encrypted  decrypt  encrypt  picture1.jpg.encrypted  picture2.jpg.encrypted
Seminar/WEEK 6/: Practical Lesson 6.pptx
Seminar/seminarweek3_0 (1)/WEEK 3/: Practical Lesson 3.docx  Practical Lesson 3.pptx  multi.c
Seminar/seminarweek5/WEEK 5/: Practical Lesson 5.pptx
